Add nodeSelector config parameter

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -104,6 +104,10 @@ spec:
         {{- end }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
+    {{- if .Values.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 8 }}
+    {{- end }}
       volumes:
       {{ if .Values.runners.privileged }}
       - name: var-run-docker-sock
