--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -33,6 +33,9 @@ data:
       {{- range .Values.runners.imagePullSecrets }}
       --kubernetes-image-pull-secrets {{ . | quote }} \
       {{- end }}
+      {{- range $key, $val := .Values.runners.nodeSelector }}
+      --kubernetes-node-selector {{ $key | quote }}:{{ $val | quote }} \
+      {{- end }}
 
     # Start the runner
     /entrypoint run --user=gitlab-runner \
