Add nodeSelector config parameter for CI job pods

--- a/values.yaml
+++ b/values.yaml
@@ -132,6 +132,11 @@ runners:
     # cpuRequests: 100m
     # memoryRequests: 128Mi
 
+  ## Specify node labels for CI job pods assignment
+  ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
+  ##
+  # nodeSelector: {}
+
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
